package org.pispeb.treff_server;

public enum Permission {
    CHANGE_GROUP_NAME,
    ADD_MEMBER,
    REMOVE_MEMBER,
    CHANGE_PERMISSIONS,
    SEND_CHAT_MESSAGE,
    CREATE_EVENT,
    EDIT_ANY_EVENT,
    CREATE_POLL,
    EDIT_ANY_POLL
}
